added board, orbit controls and basic UI

--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,32 @@
-body{
+body {
     color: rgb(173, 176, 190);
     background-color: rgb(4, 5, 14);
     margin: 0;
     padding: 0;
+    font-family: 'Baloo Tammudu 2', cursive;
+}
+
+
+#yourUI {
+    width: 20vw;
+    height: 10vh;
+    position: absolute;
+    top: 90vh;
+    left: 0;
+    text-align: center;
+    border: solid 3px black;
+    box-sizing: border-box;
+    border-radius: 0px 20px 0px 0px;
+}
+
+#opponentUI {
+    width: 20vw;
+    height: 10vh;
+    position: absolute;
+    top: 0;
+    left: 80vw;
+    text-align: center;
+    border: solid 3px black;
+    box-sizing: border-box;
+    border-radius: 0px 0px 0px 20px;
 }
