beggining of real gameplay

--- a/src/style.css
+++ b/src/style.css
@@ -11,12 +11,12 @@ body {
     width: 20vw;
     height: 10vh;
     position: absolute;
-    top: 90vh;
+    top: 0;
     left: 0;
     text-align: center;
     border: solid 3px black;
     box-sizing: border-box;
-    border-radius: 0px 20px 0px 0px;
+    border-radius: 0px 0px 20px 0px;
 }
 
 #opponentUI {
@@ -29,4 +29,16 @@ body {
     border: solid 3px black;
     box-sizing: border-box;
     border-radius: 0px 0px 0px 20px;
+}
+
+
+#turn {
+    width: 10vw;
+    height: 10vh;
+    position: absolute;
+    top: 0;
+    left: 45vw;
+    border: solid 3px black;
+    border-radius: 0px 0px 20px 20px;
+    text-align: center;
 }
