--- a/src/style.css
+++ b/src/style.css
@@ -42,3 +42,16 @@ body {
     border-radius: 0px 0px 20px 20px;
     text-align: center;
 }
+
+#end {
+    width: 40vw;
+    height: 30vh;
+    position: absolute;
+    font-size: 3em;
+    top: 40vh;
+    left: 30vw;
+    border: solid 3px black;
+    border-radius: 20px 20px 20px 20px;
+    text-align: center;
+    line-height: 30vh;
+}
