--- a/src/style.css
+++ b/src/style.css
@@ -4,8 +4,17 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Baloo Tammudu 2', cursive;
+  
+    
 }
 
+* {
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: -moz-none;
+    -o-user-select: none;
+    user-select: none;
+}
 
 #yourUI {
     width: 20vw;
